--- a/chapter3_solution.ipynb
+++ b/chapter3_solution.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,19 +179,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(a). 1105 is composite. Witness = 751\n",
-      "(b) + (c). 294409 is composite. Witness = 253898\n",
-      "(d). 118901509 is probably prime. Witness = [8305167, 48043384, 113128623, 25005263, 34941588, 23100803, 48305139, 51460421, 56761627, 65882847]\n",
-      "(e). 118901521 is composite. Witness = 66798605\n",
-      "(f). 118901527 is probably prime. Witness = [103038399, 50956588, 13803583, 5512744, 61149367, 27125065, 108465741, 116259300, 84725875, 74490990]\n",
-      "(g). 118915387 is composite. Witness = 97123299\n"
+      "(a). 1105 is composite. Witness = 199\n",
+      "(b) + (c). 294409 is composite. Witness = 188944\n",
+      "(d). 118901509 is probably prime. Witness = [21802954, 55168427, 68989803, 107028531, 28920722, 98690014, 21555102, 82547177, 23138104, 102557188]\n",
+      "(e). 118901521 is composite. Witness = 106290341\n",
+      "(f). 118901527 is probably prime. Witness = [81479134, 46095317, 41775957, 42679592, 87235900, 105122133, 15279068, 115379185, 70415148, 32109991]\n",
+      "(g). 118915387 is composite. Witness = 74282927\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "Text(0, 0.5, 'Ratio')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "Text(0, 0.5, 'Ratio')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -545,6 +545,90 @@
    "metadata": {},
    "source": [
     "#### 3.25"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) $1882^2*1898^2=30382^2=2*3^3* 5*2*3^5*5^3=(2*3^4*5^2)^2=4050^2$ $(mod$ $61063) \\rightarrow a=30382$ và $b=4050$\n",
+    "\n",
+    "$\\rightarrow gcd(61063, 30382-4050)=gcd(61063, 26632)=1 \\rightarrow$ Với dữ liệu được cung cấp thì không giải được bài toán phân tích số $61063$\n",
+    "\n",
+    "(b) $763^2*773^2=7822^2=2^6*3*2^6*3^5=(2^6*3^3)^2=1728^2$ $(mod$ $52907) \\rightarrow a=7822$ và $b=1728$\n",
+    "\n",
+    "$\\rightarrow gcd(52907, 7822-1728)=gcd(52907, 6094)=277 \\rightarrow 52907 = 277 * 191$\n",
+    "\n",
+    "(c) $2378^2*1605^2*2815^2=64248^2=2^5*3^3*5^3*2*7^3*3*5*7=(2^3*3^2*5^2*7^2)^2=88200^2$ $(mod$ $198103) \\rightarrow a=64248$ và $b=88200$\n",
+    "\n",
+    "$\\rightarrow gcd(198103, 88200-64248)=gcd(198103, 23952)=499 \\rightarrow 198103 = 499 * 397$\n",
+    "\n",
+    "(d) $4773^2*5275^2*5401^2=214699^2=(2^4*3^5*5^2*7^2*11)^2=1872980^2$ $(mod$ $2525891) \\rightarrow a=214699$ và $b=1872980$\n",
+    "\n",
+    "$\\rightarrow gcd(2525891, 1872980-214699)=gcd(2525891, 1658281)=1637 \\rightarrow 2525891 = 1637 * 1543$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.33"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Với $n=493$, ta tạo 1 danh sách từ $F(23)$ đến $F(38)$. $[36, 83, 132, 183, 236, 291, 348, 407, 468, 531, 596, 663, 732, 803, 876, 951]$ và $B=11$\n",
+    "\n",
+    "$p=2\\rightarrow [18, 83, 66, 183, 118, 291, 174, 407, 234, 531, 298, 663, 366, 803, 438, 951]$\n",
+    "\n",
+    "$p=3\\rightarrow [6, 83, 22, 61, 118, 97, 58, 407, 78, 177, 298, 221, 122, 803, 146, 317]$\n",
+    "\n",
+    "$p=4=2^2\\rightarrow [3, 83, 11, 61, 59, 97, 29, 407, 39, 177, 149, 221, 61, 803, 73, 317]$\n",
+    "\n",
+    "$p=5\\rightarrow [3, 83, 11, 61, 59, 97, 29, 407, 39, 177, 149, 221, 61, 803, 73, 317]$\n",
+    "\n",
+    "$p=7\\rightarrow [3, 83, 11, 61, 59, 97, 29, 407, 39, 177, 149, 221, 61, 803, 73, 317]$\n",
+    "\n",
+    "$p=9\\rightarrow [1, 83, 11, 61, 59, 97, 29, 407, 13, 59, 149, 221, 61, 803, 73, 317]$\n",
+    "\n",
+    "$p=11\\rightarrow [1, 83, 1, 61, 59, 97, 29, 37, 13, 59, 149, 221, 61, 73, 73, 317]$\n",
+    "\n",
+    "Vậy $F(23)=36$ và $F(25)=132$ được sàng về $1$ với $B=11$\n",
+    "\n",
+    "$23^2=2^2*3^2$ $(mod$ $493)$ và $25^2=2^2*3*11$ $(mod$ $493)$\n",
+    "\n",
+    "Có: $23^2=6^2$ $(mod$ $493)$ và $gcd(23-6, 493)=17$ $\\rightarrow 493=17*29$\n",
+    "\n",
+    "(b) Danh sách từ $F(23)$ đến $F(50)$ là $[36, 83, 132, 183, 236, 291, 348, 407, 468, 531, 596, 663, 732, 803, 876, 951, 1028, 1107, 1188, 1271, 1356, 1443, 1532, 1623, 1716, 1811, 1908, 2007]$\n",
+    "\n",
+    "$p=2\\rightarrow [18, 83, 66, 183, 118, 291, 174, 407, 234, 531, 298, 663, 366, 803, 438, 951, 514, 1107, 594, 1271, 678, 1443, 766, 1623, 858, 1811, 954, 2007]$\n",
+    "\n",
+    "$p=3\\rightarrow [6, 83, 22, 61, 118, 97, 58, 407, 78, 177, 298, 221, 122, 803, 146, 317, 514, 369, 198, 1271, 226, 481, 766, 541, 286, 1811, 318, 669]$\n",
+    "\n",
+    "$p=4=2^2\\rightarrow [3, 83, 11, 61, 59, 97, 29, 407, 39, 177, 149, 221, 61, 803, 73, 317, 257, 369, 99, 1271, 113, 481, 383, 541, 143, 1811, 159, 669]$\n",
+    "\n",
+    "$p=5\\rightarrow [3, 83, 11, 61, 59, 97, 29, 407, 39, 177, 149, 221, 61, 803, 73, 317, 257, 369, 99, 1271, 113, 481, 383, 541, 143, 1811, 159, 669]$\n",
+    "\n",
+    "$p=7\\rightarrow [3, 83, 11, 61, 59, 97, 29, 407, 39, 177, 149, 221, 61, 803, 73, 317, 257, 369, 99, 1271, 113, 481, 383, 541, 143, 1811, 159, 669]$\n",
+    "\n",
+    "$p=8=2^3\\rightarrow [3, 83, 11, 61, 59, 97, 29, 407, 39, 177, 149, 221, 61, 803, 73, 317, 257, 369, 99, 1271, 113, 481, 383, 541, 143, 1811, 159, 669]$\n",
+    "\n",
+    "$p=9\\rightarrow [1, 83, 11, 61, 59, 97, 29, 407, 13, 59, 149, 221, 61, 803, 73, 317, 257, 123, 33, 1271, 113, 481, 383, 541, 143, 1811, 53, 223]$\n",
+    "\n",
+    "$p=11\\rightarrow [1, 83, 1, 61, 59, 97, 29, 37, 13, 59, 149, 221, 61, 73, 73, 317, 257, 123, 3, 1271, 113, 481, 383, 541, 13, 1811, 53, 223]$\n",
+    "\n",
+    "$p=13\\rightarrow [1, 83, 1, 61, 59, 97, 29, 37, 1, 59, 149, 17, 61, 73, 73, 317, 257, 123, 3, 1271, 113, 37, 383, 541, 1, 1811, 53, 223]$\n",
+    "\n",
+    "$p=16=2^4\\rightarrow [1, 83, 1, 61, 59, 97, 29, 37, 1, 59, 149, 17, 61, 73, 73, 317, 257, 123, 3, 1271, 113, 37, 383, 541, 1, 1811, 53, 223]$\n",
+    "\n",
+    "Vậy ngoài $F(23)$ và $F(25)$ thì ta còn có $F(31)$ và $F(47)$\n",
+    "\n",
+    "$31^2=2^2*3^2*13$ $(mod$ $493)$ và $47^2=2^2*3*11*13$ $(mod$ $493)$"
    ]
   }
  ],
