--- a/chapter3_solution.ipynb
+++ b/chapter3_solution.ipynb
@@ -630,6 +630,44 @@
     "\n",
     "$31^2=2^2*3^2*13$ $(mod$ $493)$ và $47^2=2^2*3*11*13$ $(mod$ $493)$"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.34"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) $u=-5-2\\beta + 9\\beta ^2 -9\\beta ^3$ và $v=2+9\\beta -7\\beta ^2 +7\\beta ^3$\n",
+    "\n",
+    "$\\rightarrow u+v=-3+7\\beta +2\\beta ^2-2\\beta^3$\n",
+    "\n",
+    "Nhân 2 phần tử $u$ và $v$ ta ra được $-10-49\\beta+35\\beta ^2 +42\\beta ^3-158\\beta ^4+126\\beta ^5 - 63\\beta ^6$\n",
+    "\n",
+    "Lấy phần dư của kết quả trên cho đa thức $f(x)=1+3x-2x^3+x^4$ ta được $uv=-85\\beta^3+98\\beta^2+425\\beta+148$\n",
+    "\n",
+    "(b) $u=9+9\\beta + 6\\beta ^2 -5\\beta ^3$ và $v=-4-6\\beta -2\\beta ^2 -5\\beta ^3$\n",
+    "\n",
+    "$\\rightarrow u+v=5+3\\beta +4\\beta ^2-10\\beta^3$\n",
+    "\n",
+    "Nhân 2 phần tử $u$ và $v$ ta ra được $-36-90\\beta-96\\beta ^2-79\\beta ^3-27\\beta ^4-20\\beta ^5+25\\beta ^6$\n",
+    "\n",
+    "Lấy phần dư của kết quả trên cho đa thức $f(x)=1+3x-2x^3+x^4$ ta được $uv=-88\\beta^3-211\\beta^2-219\\beta-69$\n",
+    "\n",
+    "(c) $u=6-5\\beta + 3\\beta ^2 +3\\beta ^3$ và $v=-2+7\\beta +6\\beta ^2$\n",
+    "\n",
+    "$\\rightarrow u+v=4+2\\beta +9\\beta ^2+3\\beta^3$\n",
+    "\n",
+    "Nhân 2 phần tử $u$ và $v$ ta ra được $-12+52\\beta-5\\beta ^2 -15\\beta ^3+39\\beta ^4+18\\beta ^5$\n",
+    "\n",
+    "Lấy phần dư của kết quả trên cho đa thức $f(x)=1+3x-2x^3+x^4$ ta được $uv=135\\beta^3-59\\beta^2-191\\beta-87$"
+   ]
   }
  ],
  "metadata": {
