--- a/chapter3_solution.ipynb
+++ b/chapter3_solution.ipynb
@@ -186,12 +186,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(a). 1105 is composite. Witness = 199\n",
-      "(b) + (c). 294409 is composite. Witness = 188944\n",
-      "(d). 118901509 is probably prime. Witness = [21802954, 55168427, 68989803, 107028531, 28920722, 98690014, 21555102, 82547177, 23138104, 102557188]\n",
-      "(e). 118901521 is composite. Witness = 106290341\n",
-      "(f). 118901527 is probably prime. Witness = [81479134, 46095317, 41775957, 42679592, 87235900, 105122133, 15279068, 115379185, 70415148, 32109991]\n",
-      "(g). 118915387 is composite. Witness = 74282927\n"
+      "(a). 1105 is composite. Witness = 234\n",
+      "(b) + (c). 294409 is composite. Witness = 242621\n",
+      "(d). 118901509 is probably prime. Witness = [60329023, 37594910, 3976577, 76457234, 5147193, 90083845, 39138010, 57260861, 64310611, 55199922]\n",
+      "(e). 118901521 is composite. Witness = 54510845\n",
+      "(f). 118901527 is probably prime. Witness = [112577234, 27608303, 18795696, 30562832, 72496136, 84902411, 3153174, 31138759, 78170780, 26818360]\n",
+      "(g). 118915387 is composite. Witness = 43692089\n"
      ]
     }
    ],
@@ -667,6 +667,131 @@
     "Nhân 2 phần tử $u$ và $v$ ta ra được $-12+52\\beta-5\\beta ^2 -15\\beta ^3+39\\beta ^4+18\\beta ^5$\n",
     "\n",
     "Lấy phần dư của kết quả trên cho đa thức $f(x)=1+3x-2x^3+x^4$ ta được $uv=135\\beta^3-59\\beta^2-191\\beta-87$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.35"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) $p=19079$ và $g=17$\n",
+    "\n",
+    "$i=3030\\rightarrow 17^{3030}\\equiv 14580\\equiv 2^2*3^6*5$ $(mod$ $19079)$ là 5-smooth\n",
+    "\n",
+    "$i=6892\\rightarrow 17^{6892}\\equiv 18432\\equiv 2^{11}*3^2$ $(mod$ $19079)$ là 5-smooth (hay 3-smooth)\n",
+    "\n",
+    "$i=18312\\rightarrow 17^{18312}\\equiv 6000\\equiv 2^4*3*5^3$ $(mod$ $19079)$ là 5-smooth\n",
+    "\n",
+    "(b) Lấy $log_{17}$ trong $\\mathbb{F}_{19079}$ cho 2 vế ta có\n",
+    "\n",
+    "$3030 = 2*log_{17}(2) + 6*log_{17}(3) + log_{17}(5)$ $(mod$ $19078)$\n",
+    "\n",
+    "$6892 = 11*log_{17}(2) + 2*log_{17}(3)$ $(mod$ $19078)$\n",
+    "\n",
+    "$18312 = 4*log_{17}(2) + log_{17}(3) + 3*log_{17}(5)$ $(mod$ $19078)$\n",
+    "\n",
+    "Giải hệ phương trình trên bằng phương pháp Gauss ta được $log_{17}(2)=17734;log_{17}(3)=10838;log_{17}(5)=17002$\n",
+    "\n",
+    "(c) $19*17^{-12400}\\equiv 384\\equiv 2^7*3$ $(mod$ $19079)$ là 5-smooth\n",
+    "\n",
+    "(d) $17^x\\equiv 19$ $(mod$ $19079) \\Leftrightarrow 17^{x-12400}\\equiv 19*17^{-12400}\\equiv 2^7*3$ $(mod$ $19079)$\n",
+    "\n",
+    "Lấy $log_{17}$ trong $\\mathbb{F}_{19079}$ cho 2 vế ta có $x-12400 \\equiv 7*log_{17}(2) + log_{17}(3)\\equiv 1430$ $(mod$ $19078)$ $\\rightarrow x = 13830$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.36"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Theo định lý Fermat nhỏ ta có $a^{p-1}\\equiv 1$ $(mod$ $p)$ $\\rightarrow a^{(p-1)/2}\\equiv \\pm 1$ $(mod$ $p)$\n",
+    "\n",
+    "(b) $a \\in \\mathbb{QR}_p$ $\\rightarrow a\\equiv b^2$ $(mod$ $p) \\rightarrow a^{(p-1)/2}\\equiv b^{p-1}\\equiv 1$ $(mod$ $p)$\n",
+    "\n",
+    "$a^{(p-1)/2}\\equiv 1\\equiv 1^2$ $(mod$ $p) \\rightarrow a \\in \\mathbb{QR}_p$\n",
+    "\n",
+    "(c) Nếu $a \\in \\mathbb{QR}_p$ $\\rightarrow(\\frac{a}{p})=1$, thì $a^{(p-1)/2}\\equiv 1$ $(mod$ $p)$ (như chứng minh ở trên)\n",
+    "\n",
+    "Nếu $a \\notin \\mathbb{QR}_p$ $\\rightarrow(\\frac{a}{p})=-1$, thì $a^{(p-1)/2}\\equiv -1$ $(mod$ $p)$ (trường hợp còn lại như câu (a))\n",
+    "\n",
+    "Nếu $p$ | $a$ $\\rightarrow(\\frac{a}{p})=-1$, thì $a^{(p-1)/2}\\equiv 0$ $(mod$ $p)$ ($a$ chia hết cho $p$)\n",
+    "\n",
+    "Vậy $a^{(p-1)/2}\\equiv (\\frac{a}{p})$ $(mod$ $p)$\n",
+    "\n",
+    "(d) Với $p\\equiv 1$ $(mod$ $4)$ thì $p-1=4k$ với $k \\in \\mathbb{Z} \\rightarrow (\\frac{-1}{p})\\equiv(-1)^{(p-1)/2}\\equiv(-1)^{2k}\\equiv 1$ $(mod$ $p)$\n",
+    "\n",
+    "Với $p\\equiv 3$ $(mod$ $4)$ thì $p-1=4k+2$ với $k \\in \\mathbb{Z} \\rightarrow (\\frac{-1}{p})\\equiv(-1)^{(p-1)/2}\\equiv(-1)^{2k+1}\\equiv -1$ $(mod$ $p)$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.38"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) $p\\equiv 3$ $(mod$ $4) \\rightarrow p+1 = 4k$ với $k \\in \\mathbb{Z}$\n",
+    "\n",
+    "Với $a\\equiv b^2$ $(mod$ $p)$ ta có $a^{(p+1)/4}\\equiv b^{(p+1)/2}\\equiv b*b^{(p-1)/2}\\equiv \\pm b$ $(mod$ $p)$\n",
+    "\n",
+    "Vậy $b \\equiv \\pm a^{(p+1)/4}$ $(mod$ $p)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(i). b = 65\n",
+      "(ii). b = 2980\n",
+      "(iii). No solution\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solve_quadratic_residue(a, p):\n",
+    "    if p % 4 != 3: return -1\n",
+    "    result = pow(a, (p + 1) // 4, p)\n",
+    "    if pow(result, 2, p) == a: return result\n",
+    "    return -1\n",
+    "\n",
+    "res = solve_quadratic_residue(116, 587)\n",
+    "if res == -1: print(\"(i). No solution\")\n",
+    "else: print(\"(i). b =\", res)\n",
+    "\n",
+    "res = solve_quadratic_residue(3217, 8627)\n",
+    "if res == -1: print(\"(ii). No solution\")\n",
+    "else: print(\"(ii). b =\", res)\n",
+    "\n",
+    "res = solve_quadratic_residue(9109, 10663)\n",
+    "if res == -1: print(\"(iii). No solution\")\n",
+    "else: print(\"(iii). b =\", res)"
    ]
   }
  ],
