--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -291,6 +291,38 @@
     "    if x == ' ': continue\n",
     "    else: message += decrypt[x]\n",
     "print(message)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.5"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Có tổng cộng $26!$ mã thay thế có thể sử dụng được\n",
+    "\n",
+    "(b.i) Không có kí tự nào được giữ nguyên khi mã hoá\n",
+    "\n",
+    "Gọi $S_i$ là tập hợp các hệ mã thay thế thoả vị trí $i$ là cố định $(1 \\leq i \\leq 26)$, ta chỉ xét vị trí $i$, những vị trí khác có cố định hay không thì ta không quan tâm $\\rightarrow$ có ít nhất 1 vị trí cố định trong $S_i$\n",
+    "\n",
+    "Vậy để không có kí tự nào cố định ta thiết lập đẳng thức ở bao hàm loại trừ như sau, việc không có kí tự nào tương đương với phần bù của việc có ít nhất 1 kí tự cố định trong 26 kí tự.\n",
+    "\n",
+    "$26!-|S_1\\cup S_2\\cup S_3 ... \\cup S_{26}|=26!-(\\displaystyle\\sum_i(S_i)-\\displaystyle\\sum_{i<j}(S_i\\cap S_j)+...)$\n",
+    "\n",
+    "Ta có $k$ phần tử cố định, còn lại thì không quan tâm nó có cố định hay không $\\rightarrow$ ta có số lượng phần tử trong tập hợp là $\\binom{n}{k}*(n-k)!$\n",
+    "\n",
+    "Vậy số lượng hệ mã thay thế thoả mãn không có phần tử nào cố định là\n",
+    "\n",
+    "$26!-|S_1\\cup S_2\\cup S_3 ... \\cup S_{26}|=26!-(\\displaystyle\\sum_i(S_i)-\\displaystyle\\sum_{i<j}(S_i\\cap S_j)+...)=26!-\\sum_{k=1}^{26}(-1)^{k-1}*\\binom{26}{k}*(26-k)!=26!-26!*\\sum_{k=1}^{26}\\displaystyle\\frac{(-1)^{k-1}}{k!}=26!*\\sum_{k=0}^{26}\\displaystyle\\frac{(-1)^{k}}{k!}$ $\\bigg($ Xét $26!=26!*1=26!*\\displaystyle\\frac{(-1)^{0}}{0!}\\bigg)$\n",
+    "\n",
+    "(b.ii) Có ít nhất 1 kí tự được giữ nguyên $\\rightarrow$ như câu trên ta có số lượng hệ mã thay thế phù hợp là $26!*\\sum_{k=1}^{26}\\displaystyle\\frac{(-1)^{k-1}}{k!}$"
    ]
   },
   {
@@ -376,19 +408,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "(a)\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bezout_algorithm(a, b):\n",
+    "    if b == 0: return (a, 1, 0) # fix in problem (d)\n",
     "    u = 1; g = a; x = 0; y = b\n",
     "    while y != 0:\n",
     "        q = int(g / y)\n",
@@ -397,24 +423,84 @@
     "        u = x; g = y\n",
     "        x = s; y = t\n",
     "    v = (g - a * u) / b\n",
-    "    return (g, u, v)"
+    "    return (g, u, int(v))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(17, -31, 13.0)\n"
+      "(i). (17, -31, 13)\n",
+      "(ii). (12, -37, 8)\n",
+      "(iii). (7, 4517, -4430)\n",
+      "(iv). (1, 59789, -970295)\n"
      ]
     }
    ],
    "source": [
-    "print(bezout_algorithm(527, 1258))"
+    "print(\"(i).\", bezout_algorithm(527, 1258))\n",
+    "print(\"(ii).\", bezout_algorithm(228, 1056))\n",
+    "print(\"(iii).\", bezout_algorithm(163961, 167181))\n",
+    "print(\"(iv).\", bezout_algorithm(3892394, 239847))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(d) Nếu $b=0$ thì ở bước 1, $y=b=0$ và qua bước 2, ta không thể chia cho $b$ là số $0$\n",
+    "\n",
+    "Sửa lại để giải quyết trường hợp đó nằm ở dòng 2 trên code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(i). (17, 43, -18)\n",
+      "(ii). (12, 51, -11)\n",
+      "(iii). (7, 4517, -4430)\n",
+      "(iv). (1, 59789, -970295)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bezout_algorithm(a, b):\n",
+    "    if b == 0: return (a, 1, 0) # fix in problem (d)\n",
+    "    u = 1; g = a; x = 0; y = b\n",
+    "    while y != 0:\n",
+    "        q = int(g / y)\n",
+    "        t = g % y\n",
+    "        s = u - q * x\n",
+    "        u = x; g = y\n",
+    "        x = s; y = t\n",
+    "    v = (g - a * u) // b\n",
+    "\n",
+    "    while u < 0:\n",
+    "        u += b // g\n",
+    "        v -= a // g\n",
+    "\n",
+    "    while u - b // g > 0:\n",
+    "        u -= b // g\n",
+    "        v += a // g\n",
+    "\n",
+    "    return (g, u, v)\n",
+    "\n",
+    "print(\"(i).\", bezout_algorithm(527, 1258))\n",
+    "print(\"(ii).\", bezout_algorithm(228, 1056))\n",
+    "print(\"(iii).\", bezout_algorithm(163961, 167181))\n",
+    "print(\"(iv).\", bezout_algorithm(3892394, 239847))"
    ]
   },
   {
@@ -625,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
