--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import math"
+    "import math\n",
+    "from sympy import Matrix"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -910,6 +911,61 @@
     "#### 1.38\n",
     "\n",
     "Answer: ifmusicbethefoodofloveplayon"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(i). c = Matrix([[3], [3]])\n",
+      "(ii). k1^{-1} = Matrix([[3, 6], [4, 5]])\n",
+      "(iii). m = Matrix([[0], [4]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "def hill_cipher_encrypt(k1, m, k2, p):\n",
+    "    return (k1 @ m + k2) % p\n",
+    "\n",
+    "def hill_cipher_decrypt(k1, c, k2, p):\n",
+    "    return (Matrix(k1).inv_mod(p) @ ((c - k2) % p)) % p\n",
+    "\n",
+    "m = np.array([[2], [1]])\n",
+    "k1 = np.array([[1, 3], [2, 2]])\n",
+    "k2 = np.array([[5], [4]])\n",
+    "p = 7\n",
+    "c = np.array([[3], [5]])\n",
+    "\n",
+    "print(\"(i). c =\", Matrix(hill_cipher_encrypt(k1, m, k2, p)))\n",
+    "print(\"(ii). k1^{-1} =\", Matrix(k1).inv_mod(p))\n",
+    "print(\"(iii). m =\", hill_cipher_decrypt(k1, c, k2, p))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(b) Hệ mã Hill dễ bị tấn công bởi phương pháp *chosen plaintext attack* bởi vì ta có thể yêu cầu các cặp $(p,c)$ để lập nên hệ phương trình dạng $c=k_1*p+k_2$ và giải hệ phương trình tuyến tính trên nếu ta không thay đổi $k_1, k_2$ thường xuyên\n",
+    "\n",
+    "(c) Giả sử $k_1=[[a,b],[c,d]]$ và $k_2=[[e],[f]]$ thì ta lập được hệ phương trình theo modulo $11$\n",
+    "\n",
+    "Có: $5a+4b+e=1$, $8a+10b+e=8$ và $7a+b+e=8$ nên $a=3,b=7,e=2$\n",
+    "\n",
+    "Có: $5a+4b+e=8$, $8a+10b+e=5$ và $7a+b+e=7$ nên $c=4,d=3,f=9$"
    ]
   },
   {
