--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -969,6 +969,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.45"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Một nửa không gian khoá là $2^{56}/2=2^{55}$ khoá cần kiểm tra\n",
+    "\n",
+    "Máy tính của kẻ tấn công có thể kiểm tra $10^{10}$ khoá trong 1 giây $\\rightarrow$ để kiểm tra $2^{55}$ khoá thì mất $2^{55}/10^{10}=3602880$ giây $=60048$ phút $=1001$ giờ $=41.69$ ngày\n",
+    "\n",
+    "(b) Để máy tính của kẻ tấn công vét cạn một nửa không gian khoá trong $100$ năm thì ta cần chọn $B$ thoả $2^{B-1}/(10^{10}*3600*24*365.25)=100 \\rightarrow B = 1 +log_2(100*10^{10}*3600*24*365.25)=1 +64.77\\approx 66$ "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -998,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
