--- a/chapter1_solution.ipynb
+++ b/chapter1_solution.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "25      Z       p"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1000,6 +1000,58 @@
     "\n",
     "$c= 1001010001010111, m = 0010010000101100 \\Rightarrow k = c \\oplus m = 1011000001111011$"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.48"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Secret key k = 87192883\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_key(c1, c2):\n",
+    "    g = math.gcd(c1, c2)\n",
+    "    factor = []\n",
+    "    exp = []\n",
+    "    p = 2\n",
+    "    while g != 1:\n",
+    "        f = 0\n",
+    "        while g % p == 0:\n",
+    "            f += 1\n",
+    "            g //= p\n",
+    "        if f != 0:\n",
+    "            factor.append(p)\n",
+    "            exp.append(f)\n",
+    "        p += 1\n",
+    "    res = factor[len(factor) - 1]\n",
+    "    return res\n",
+    "\n",
+    "c1 = 12849217045006222\n",
+    "c2 = 6485880443666222\n",
+    "print(\"Secret key k =\", find_key(c1, c2))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ta chọn kết quả này là vì khoá ta dùng là một số nguyên tố lớn nên ta sẽ lấy số nguyên tố lớn nhất mà ta phân tích được làm khoá bí mật."
+   ]
   }
  ],
  "metadata": {
@@ -1018,7 +1070,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
