--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -687,6 +687,28 @@
     "print(\"(c). x =\", pohlighellman(2, 41022299, 39183497))\n",
     "print(\"(d). x =\", pohlighellman(17, 1291799, 192988))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.31"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$a_1\\equiv a_2$ $(mod$ $m)$ $\\rightarrow a_1 = k_1*m+a_2$\n",
+    "\n",
+    "$b_1\\equiv b_2$ $(mod$ $m)$ $\\rightarrow b_1 = k_2*m+b_2$\n",
+    "\n",
+    "$\\rightarrow a_1 \\pm a_2$ và $b_1 \\pm b_2$ nằm trong $R$ $\\rightarrow a_1 \\pm a_2 \\equiv b_1 \\pm b_2$ $(mod$ $m)$\n",
+    "\n",
+    "$a_1*b_1=a_2*b_2+(...)*m \\rightarrow a_1*b_1\\equiv a_2*b_2$ $(mod$ $m)$"
+   ]
   }
  ],
  "metadata": {
