--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -709,6 +709,33 @@
     "\n",
     "$a_1*b_1=a_2*b_2+(...)*m \\rightarrow a_1*b_1\\equiv a_2*b_2$ $(mod$ $m)$"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.33"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Giả sử $deg(a)=m$ và $deg(b)=n$ thì $a=a_0+a_1x+a_2x^2+...+a_mx^m$ và $b=b_0+b_1x+b_2x^2+...+b_nx^n \\rightarrow a*b$ có phần tử với bậc lớn nhất là $a_mb_nx^{m+n} \\Rightarrow deg(a*b)=m+n=deg(a)+deg(b)$\n",
+    "\n",
+    "(b) $a \\in \\mathbb{F} \\rightarrow$ theo định nghĩa của trường $\\mathbb{F}$ thì luôn tồn tại nghịch đảo $a^{-1}$ theo phép nhân\n",
+    "\n",
+    "Nếu $a$ là đa thức hằng $\\rightarrow$ tồn tại phần tử nghịch đảo trong trường $\\mathbb{F}$ của $a$\n",
+    "\n",
+    "Nếu $a$ không phải là đa thức hằng $\\rightarrow$ không thể tìm nghịch đảo được vì ta chỉ có thể biểu diễn theo biến $x^{-1}$ chứ không thể biểu diễn theo $x$\n",
+    "\n",
+    "(d) Vành $R=\\displaystyle\\frac{\\mathbb{Z}}{6\\mathbb{Z}}$. Do $6=2*3$, ta xét $a=5+2x$ và $b=5+3x$ ta được những điều sau\n",
+    "- $deg(a)=1$\n",
+    "- $deg(b)=1$\n",
+    "- $a*b=25+25x+6x^2=1+x$ trong vành được mô tả trên $\\rightarrow deg(a*b)=1 \\neq deg(a) + deg(b)$"
+   ]
   }
  ],
  "metadata": {
@@ -727,12 +754,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "eadba2b3581326a2d7bd273e9d419eb0fab219e321930fd6a453aab726dd8270"
+    "hash": "d2c7e20b4de8759bf70f06311a58eeb17bbc254d85ecaa7e2665fd598f87fd62"
    }
   }
  },
