--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -736,6 +736,14 @@
     "- $deg(b)=1$\n",
     "- $a*b=25+25x+6x^2=1+x$ trong vành được mô tả trên $\\rightarrow deg(a*b)=1 \\neq deg(a) + deg(b)$"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.34"
+   ]
   }
  ],
  "metadata": {
