--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -744,6 +744,66 @@
    "source": [
     "#### 2.34"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a). p = 2, gcd(a, b) = [1, 1, 1, 1]\n",
+      "(b). p = 3, gcd(a, b) = [1, 2, 2]\n",
+      "(c). p = 5, gcd(a, b) = [4, 1]\n",
+      "(d). p = 7, gcd(a, b) = [4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def poly_divisor(p, a, b):\n",
+    "    if len(a) < len(b): return a\n",
+    "    res = []\n",
+    "    for i in range(len(a) - len(b) + 1):\n",
+    "        tmp = a[0] * pow(b[0], -1, p)\n",
+    "        res.append(tmp)\n",
+    "        poly_tmp = []\n",
+    "        for j in range(len(b)):\n",
+    "            poly_tmp.append(-tmp * b[j])\n",
+    "        for j in range(len(b)):\n",
+    "            a[j] = (a[j] + poly_tmp[j]) % p\n",
+    "        a.pop(0)\n",
+    "    while len(a) > 0 and a[0] == 0: a.pop(0)\n",
+    "    for i in range(len(res)): res[i] %= p\n",
+    "    return res, a\n",
+    "\n",
+    "def poly_gcd(p, a, b):\n",
+    "    if len(b) == 0: return a\n",
+    "    q, r = poly_divisor(p, a, b)\n",
+    "    return poly_gcd(p, b, r)\n",
+    "\n",
+    "a = [1, 3, -5, -3, 2, 2]\n",
+    "b = [1, 1, -2, 4, 1, 5]\n",
+    "print(\"(a). p = 2, gcd(a, b) =\", poly_gcd(2, a, b))\n",
+    "a = [1, 3, -5, -3, 2, 2]\n",
+    "b = [1, 1, -2, 4, 1, 5]\n",
+    "print(\"(b). p = 3, gcd(a, b) =\", poly_gcd(3, a, b))\n",
+    "a = [1, 3, -5, -3, 2, 2]\n",
+    "b = [1, 1, -2, 4, 1, 5]\n",
+    "print(\"(c). p = 5, gcd(a, b) =\", poly_gcd(5, a, b))\n",
+    "a = [1, 3, -5, -3, 2, 2]\n",
+    "b = [1, 1, -2, 4, 1, 5]\n",
+    "print(\"(d). p = 7, gcd(a, b) =\", poly_gcd(7, a, b))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cách biểu diễn đa thức dưới dạng mảng là chứa từng hệ số của đa thức theo bậc giảm dần. Ví dụ [1, 1, 1, 1] thì sẽ là đa thức $x^3+x^2+x+1$ hay [1, 3, 5, -2, 4] là đa thức $x^4+3x^3+5x^2-2x+4$"
+   ]
   }
  ],
  "metadata": {
@@ -762,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
