--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
     "    return res\n",
     "\n",
     "print(\"(a). Square root of 340 modulo 437:\", find_square_root(340, 437))\n",
-    "print(\"(b). Square root of 253 modulo 3143:\", find_square_root(253, 3143)) #\n",
+    "print(\"(b). Square root of 253 modulo 3143:\", find_square_root(253, 3143))\n",
     "print(\"(c). Square root of 2833 modulo 4189:\", find_square_root(2833, 4189))\n",
     "print(\"(d). Square root of 813 modulo 868:\", find_square_root(813, 868))"
    ]
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
     "        a.pop(0)\n",
     "    while len(a) > 0 and a[0] == 0: a.pop(0)\n",
     "    for i in range(len(res)): res[i] %= p\n",
-    "    return res, a\n",
+    "    return res, a # res là thương, a là phần dư\n",
     "\n",
     "def poly_gcd(p, a, b):\n",
     "    if len(b) == 0: return a\n",
@@ -803,6 +803,88 @@
    "metadata": {},
    "source": [
     "Cách biểu diễn đa thức dưới dạng mảng là chứa từng hệ số của đa thức theo bậc giảm dần. Ví dụ [1, 1, 1, 1] thì sẽ là đa thức $x^3+x^2+x+1$ hay [1, 3, 5, -2, 4] là đa thức $x^4+3x^3+5x^2-2x+4$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.35"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a). u = [1], v = [1]\n",
+      "(b). u = [1, 1], v = [2, 0]\n",
+      "(c). u = [2, 1, 4, 3], v = [3, 0, 4, 0]\n",
+      "(d). u = [5, 5, 4, 6, 2], v = [2, 6, 4, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def poly_plus(p, a, b):\n",
+    "    while len(a) < len(b): a.insert(0, 0)\n",
+    "    while len(a) > len(b): b.insert(0, 0)\n",
+    "    return [(a[i] + b[i]) % p for i in range(len(a))]\n",
+    "\n",
+    "def poly_minus(p, a, b):\n",
+    "    while len(a) < len(b): a.insert(0, 0)\n",
+    "    while len(a) > len(b): b.insert(0, 0)\n",
+    "    return [(a[i] - b[i]) % p for i in range(len(a))]\n",
+    "\n",
+    "def poly_multiply(p, a, b):\n",
+    "    n = len(a) + len(b) - 1\n",
+    "    res = [0 for i in range(n)]\n",
+    "    for i in range(len(a)):\n",
+    "        deg_ai = len(a) - i - 1\n",
+    "        for j in range(len(b)):\n",
+    "            deg_bj = len(b) - j - 1\n",
+    "            res[n - 1 - deg_ai - deg_bj] += a[i] * b[j]\n",
+    "    for i in range(len(res)): res[i] %= p\n",
+    "    return res\n",
+    "\n",
+    "def solve235(p, a, b):\n",
+    "    if len(a) < len(b): a, b = b, a\n",
+    "    if b == [0]: return [1], [0]\n",
+    "    x2 = [1]; x1 = [0]; y2 = [0]; y1 = [1]\n",
+    "\n",
+    "    while b != []:\n",
+    "        q, r = poly_divisor(p, a, b)\n",
+    "        x = poly_minus(p, x2, poly_multiply(p, q, x1))\n",
+    "        y = poly_minus(p, y2, poly_multiply(p, q, y1))\n",
+    "        a = b; b = r; x2 = x1; x1 = x; y2 = y1; y1 = y\n",
+    "\n",
+    "    while len(x2) > 0 and x2[0] == 0: x2.pop(0)\n",
+    "    while len(y2) > 0 and y2[0] == 0: y2.pop(0)\n",
+    "    return x2, y2\n",
+    "\n",
+    "a = [1, 3, -5, -3, 2, 2]\n",
+    "b = [1, 1, -2, 4, 1, 5]\n",
+    "u, v = solve235(2, a, b)\n",
+    "print(\"(a). u = \" + str(u) + \", v =\", v)\n",
+    "\n",
+    "a = [1, 3, -5, -3, 2, 2]\n",
+    "b = [1, 1, -2, 4, 1, 5]\n",
+    "u, v = solve235(3, a, b)\n",
+    "print(\"(b). u = \" + str(u) + \", v =\", v)\n",
+    "\n",
+    "a = [1, 3, -5, -3, 2, 2]\n",
+    "b = [1, 1, -2, 4, 1, 5]\n",
+    "u, v = solve235(5, a, b)\n",
+    "print(\"(c). u = \" + str(u) + \", v =\", v)\n",
+    "\n",
+    "a = [1, 3, -5, -3, 2, 2]\n",
+    "b = [1, 1, -2, 4, 1, 5]\n",
+    "u, v = solve235(7, a, b)\n",
+    "print(\"(d). u = \" + str(u) + \", v =\", v)"
    ]
   }
  ],
