--- a/chapter2_solution.ipynb
+++ b/chapter2_solution.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
    ],
    "source": [
     "def poly_divisor(p, a, b):\n",
-    "    if len(a) < len(b): return a\n",
+    "    if len(a) < len(b): return [], a\n",
     "    res = []\n",
     "    for i in range(len(a) - len(b) + 1):\n",
     "        tmp = a[0] * pow(b[0], -1, p)\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -885,6 +885,63 @@
     "b = [1, 1, -2, 4, 1, 5]\n",
     "u, v = solve235(7, a, b)\n",
     "print(\"(d). u = \" + str(u) + \", v =\", v)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2.37"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/ 1 * x^2 = [1, 0, 0]\n",
+      "2/ 1 * (1 + x) = [1, 1]\n",
+      "3/ x * x^2 = [1, 1]\n",
+      "4/ x * (x + x^2) = [1, 1, 1]\n",
+      "5/ x^2 * 1 = [1, 0, 0]\n",
+      "6/ x^2 * x = [1, 1]\n",
+      "7/ (1 + x) * 1 = [1, 1]\n",
+      "8/ (1 + x) * (1 + x^2) = [1, 0, 0]\n",
+      "9/ (1 + x^2) * (1 + x) = [1, 0, 0]\n",
+      "10/ (1 + x^2) * (1 + x + x^2) = [1, 1, 0]\n",
+      "11/ (x + x^2) * x = [1, 1, 1]\n",
+      "12/ (x + x^2) * (1 + x + x^2) = [1, 0, 0]\n",
+      "13/ (1 + x + x^2) * (1 + x^2) = [1, 1, 0]\n",
+      "14/ (1 + x + x^2) * (x + x^2) = [1, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solve237(p, u, a, b):\n",
+    "    temp, res = poly_divisor(p, poly_multiply(p, a, b), u)\n",
+    "    return res\n",
+    "\n",
+    "p = 2\n",
+    "u = [1, 0, 1, 1]\n",
+    "print(\"1/ 1 * x^2 =\", solve237(p, u, [1], [1, 0, 0]))\n",
+    "print(\"2/ 1 * (1 + x) =\", solve237(p, u, [1], [1, 1]))\n",
+    "print(\"3/ x * x^2 =\", solve237(p, u, [1, 0], [1, 0, 0]))\n",
+    "print(\"4/ x * (x + x^2) =\", solve237(p, u, [1, 0], [1, 1, 0]))\n",
+    "print(\"5/ x^2 * 1 =\", solve237(p, u, [1, 0, 0], [1]))\n",
+    "print(\"6/ x^2 * x =\", solve237(p, u, [1, 0, 0], [1, 0]))\n",
+    "print(\"7/ (1 + x) * 1 =\", solve237(p, u, [1, 1], [1]))\n",
+    "print(\"8/ (1 + x) * (1 + x^2) =\", solve237(p, u, [1, 1], [1, 0, 1]))\n",
+    "print(\"9/ (1 + x^2) * (1 + x) =\", solve237(p, u, [1, 0, 1], [1, 1]))\n",
+    "print(\"10/ (1 + x^2) * (1 + x + x^2) =\", solve237(p, u, [1, 0, 1], [1, 1, 1]))\n",
+    "print(\"11/ (x + x^2) * x =\", solve237(p, u, [1, 1, 0], [1, 0]))\n",
+    "print(\"12/ (x + x^2) * (1 + x + x^2) =\", solve237(p, u, [1, 1, 0], [1, 1, 1]))\n",
+    "print(\"13/ (1 + x + x^2) * (1 + x^2) =\", solve237(p, u, [1, 1, 1], [1, 0, 1]))\n",
+    "print(\"14/ (1 + x + x^2) * (x + x^2) =\", solve237(p, u, [1, 1, 1], [1, 1, 0]))"
    ]
   }
  ],
