--- a/chapter3_solution.ipynb
+++ b/chapter3_solution.ipynb
@@ -186,12 +186,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(a). 1105 is composite. Witness = 333\n",
-      "(b) + (c). 294409 is composite. Witness = 165811\n",
-      "(d). 118901509 is probably prime. Witness = [81386180, 65644858, 26302546, 10407784, 14926588, 60940259, 69832787, 114180051, 14356736, 114718804]\n",
-      "(e). 118901521 is composite. Witness = 85789505\n",
-      "(f). 118901527 is probably prime. Witness = [100741604, 90484343, 61766249, 101719615, 109336035, 86304710, 52874890, 83010743, 19525212, 21596686]\n",
-      "(g). 118915387 is composite. Witness = 713468\n"
+      "(a). 1105 is composite. Witness = 787\n",
+      "(b) + (c). 294409 is composite. Witness = 187684\n",
+      "(d). 118901509 is probably prime. Witness = [57389910, 32016244, 77537308, 52306613, 98128840, 114636291, 39256471, 59353016, 84078737, 90223555]\n",
+      "(e). 118901521 is composite. Witness = 58349769\n",
+      "(f). 118901527 is probably prime. Witness = [66821170, 91228792, 9275454, 58214606, 103100848, 31298950, 11598973, 58692437, 114554818, 52671901]\n",
+      "(g). 118915387 is composite. Witness = 102129043\n"
      ]
     }
    ],
@@ -829,6 +829,28 @@
     "res = solve_quadratic_residue(9109, 10663)\n",
     "if res == -1: print(\"(iii). No solution\")\n",
     "else: print(\"(iii). b =\", res)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3.42"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) Bob có hàm giải mã &rarr; tính được m = r || (r $\\oplus$ m')\n",
+    "\n",
+    "Đặt m0 = r (lấy b bits đầu của m) và m1 = r $\\oplus$ m' (lấy b bits sau của m) &rarr; m0 $\\oplus$ m1 = r $\\oplus$ r $\\oplus$ m' = m'\n",
+    "\n",
+    "(b) Nếu ban đầu plaintext và ciphertext của hệ mã ban đầu có độ dài bằng nhau &rarr; message expansion ratio = 2 (tin nhắn chỉ có độ dài bằng một nửa của bản mã)\n",
+    "\n",
+    "(c) Nếu hệ mã ban đầu có $\\mu*|m|=|c|$ &rarr; $\\mu*2*|m'|=|c|$ &rarr; message expansion ratio = $2\\mu$"
    ]
   }
  ],
