--- a/chapter4_solution.ipynb
+++ b/chapter4_solution.ipynb
@@ -49,11 +49,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "(a) $\\binom{n-1}{j-1} + \\binom{n-1}{j} = \\frac{(n-1)!}{(n-j)!\\times (j-1)!} + \\frac{(n-1)!}{(n-j-1)!\\times j!} = \\frac{(n-1)!}{(n-j-1)!(j-1)!}\\times\\big(\\frac{1}{n-j}+\\frac{1}{j}\\big)=\\frac{(n-1)!}{(n-j-1)!(j-1)!}\\times\\big(\\frac{j+n-j}{j\\times(n-j)}\\big)=\\frac{n!}{(n-j)!j!}=\\binom{n}{j}$\n",
+    "\n",
+    "(b) Có: $(x+y)^n=(x+y)(x+y)^{n-1}$ và cần đi tìm hệ số của $x^jy^{n-j}$\n",
+    "- Trong $(x+y)^n$ thì hệ số là $\\binom{n}{j}$\n",
+    "- Trong $(x+y)(x+y)^{n-1}$ thì hệ số là\n",
+    "    + Chỉ xét đẳng thức bên phải, nếu bên trái lấy $x$ thì ta cần hệ số của $x^{j-1}y^{n-j}$ trong $(x+y)^{n-1} \\rightarrow \\binom{n-1}{j-1}$\n",
+    "    + Nếu bên trái lấy $y$ thì ta cần hệ số của $x^jy^{n-j-1}$ trong $(x+y)^{n-1} \\rightarrow \\binom{n-1}{j}$\n",
+    "    \n",
+    "Mà hệ số của $x^jy^{n-j}$ của 2 vế phương trình ban đầu là bằng nhau $\\rightarrow \\binom{n}{j} = \\binom{n-1}{j-1} + \\binom{n-1}{j}$\n",
+    "\n",
+    "(c) Để chọn $j$ phần tử từ một tập $n$ phần tử (có $\\binom{n}{j}$ cách chọn), không mất tính tổng quát, giả sử tập $n$ phần tử cần chọn là $S=\\{s_1,s_2,...,s_n\\}$ và $s_n$ là phần tử mà ta xét.\n",
+    "- Không chọn phần tử $s_n \\rightarrow$ cần chọn $j$ phần tử từ tập $(n-1)$ phần tử $\\rightarrow \\binom{n-1}{j}$\n",
+    "- Chọn phần tử $s_n \\rightarrow$ cần chọn $(j-1)$ phần tử từ tập $(n-1)$ phần tử $\\rightarrow \\binom{n-1}{j-1}$\n",
+    "\n",
+    "Vậy $\\binom{n}{j} = \\binom{n-1}{j-1} + \\binom{n-1}{j}$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.8\n",
+    "\n",
+    "(a) Nếu $1 \\leq j \\leq p-1$ thì ta có $\\binom{p}{j}=\\frac{p!}{(p-j)!j!}=p \\times \\frac{(p-1)!}{(p-j)!j!}$\n",
+    "\n",
+    "Có: $\\binom{p}{j} \\in \\mathbb{Z} \\rightarrow p \\times \\frac{(p-1)!}{(p-j)!j!} \\in \\mathbb{Z}$, mà $p$ không chia hết cho $(p-j)!j! \\rightarrow (p-1)!$ chia hết cho $(p-j)!j! \\rightarrow \\frac{(p-1)!}{(p-j)!j!} = k \\in \\mathbb{Z} \\rightarrow \\binom{p}{j}=p \\times k$ chia hết cho $p$\n",
+    "\n",
+    "(b) $(a+b)^p \\equiv \\displaystyle\\sum_{i=0}^p\\binom{p}{i}\\times a^i \\times b^{p-i}=a^p+b^p$ (mod $p$)\n",
+    "\n",
+    "(c) Chứng minh $a^p \\equiv a$ (mod $p$) với mọi $a \\geq 0$\n",
+    "\n",
+    "Sử dụng quy nạp, với $a=0$ ta thấy công thức trên luôn đúng. Giả sử công thức trên đúng với $a=k \\in \\mathbb{Z}$ (nghĩa là $k^p \\equiv k$ (mod $p$)), ta cần chứng minh công thức trên đúng với $a=k+1$, tức là chứng minh $(k+1)^p \\equiv k+1$ (mod $p$)\n",
+    "\n",
+    "Từ câu (b) và cho $b=1$ ta có $(k+1)^p \\equiv k^p + 1 \\equiv k + 1$ (mod $p$) $\\forall k \\in \\mathbb{Z}$ (đpcm, vế sau là từ điều giả sử của quy nạp)\n",
+    "\n",
+    "(d) Do $gcd(a,p)=1 \\rightarrow \\exists a^{-1}$ trong $\\mathbb{Z_p^*}$\n",
+    "\n",
+    "Có: $a^p \\equiv a$ (mod $p$) $\\rightarrow a^{p-1} \\equiv 1$ (mod $p$) do có nghịch đảo nên nhân $a^{-1}$ vào 2 vế"
+   ]
   }
  ],
  "metadata": {
