--- a/chapter4_solution.ipynb
+++ b/chapter4_solution.ipynb
@@ -93,11 +93,109 @@
     "\n",
     "Có: $a^p \\equiv a$ (mod $p$) $\\rightarrow a^{p-1} \\equiv 1$ (mod $p$) do có nghịch đảo nên nhân $a^{-1}$ vào 2 vế"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a). c = aonpskuofesulttlxbzttpunlsftsg\n",
+      "(b). c = yvvmlrexiixcffzfzxxhrisimbrfnun\n"
+     ]
+    }
+   ],
+   "source": [
+    "def vigenere_encrypt(m, k):\n",
+    "    m = m.replace(\" \", \"\")\n",
+    "    m = m.replace(\",\", \"\")\n",
+    "    m = m.lower()\n",
+    "\n",
+    "    idx = 0\n",
+    "    c = \"\"\n",
+    "    for i in range(len(m)):\n",
+    "        c += chr((ord(m[i]) + ord(k[idx]) - 2 * ord('a')) % 26 + ord('a'))\n",
+    "        if idx == len(k) - 1:\n",
+    "            idx = 0\n",
+    "        else:\n",
+    "            idx += 1\n",
+    "    \n",
+    "    return c\n",
+    "\n",
+    "print(\"(a). c =\", vigenere_encrypt(\"To be, or not to be, that is the question\", \"hamlet\"))\n",
+    "print(\"(b). c =\", vigenere_encrypt(\"The treasure is buried under the big W\", \"fortune\"))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(a). m = peterpiperpickedapeckofpickledpeppers\n",
+      "(b). m = thedifferentbranchesofarithmeticrepliedthemockturtleareambitiondistractionuglificationandderision\n"
+     ]
+    }
+   ],
+   "source": [
+    "def vigenere_decrypt(c, k):\n",
+    "    c = c.replace(\" \", \"\")\n",
+    "\n",
+    "    idx = 0\n",
+    "    m = \"\"\n",
+    "    for i in range(len(c)):\n",
+    "        m += chr((ord(c[i]) - ord(k[idx])) % 26 + ord('a'))\n",
+    "        if idx == len(k) - 1:\n",
+    "            idx = 0\n",
+    "        else:\n",
+    "            idx += 1\n",
+    "    \n",
+    "    return m\n",
+    "\n",
+    "print(\"(a). m =\", vigenere_decrypt(\"rsghz bmcxt dvfsq hnigq xrnbm pdnsq smbtr ku\", \"condiment\"))\n",
+    "print(\"(b). m =\", vigenere_decrypt(\"khfeq ymsci etcsi gjvpw ffbsq moapx zcsfx epsox yenpk daicx cebsm ttptx zooeq laflg kipoc zswqm taujw ghboh vrjtq hu\", \"rabbithole\"))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4
  },
